# viv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: README_cn.md
src/: config.rs  error.rs  event.rs  json.rs  lib.rs  llm.rs  main.rs  repl.rs
src/agent/: agent.rs  channel.rs  context.rs  evolution.rs  message.rs  mod.rs  prompt.rs  protocol.rs  run.rs
src/bus/: channel.rs  mod.rs  terminal.rs
src/core/: asn1.rs  bigint.rs  json.rs  jsonrpc.rs  mod.rs  sync.rs
src/llm/: mod.rs
src/log/: macros.rs  mod.rs
src/lsp/: client.rs  config.rs  jsonrpc.rs  mod.rs  tools.rs  types.rs
src/mcp/: client.rs  config.rs  mod.rs  tools.rs  transport.rs  types.rs
src/memory/: compaction.rs  index.rs  mod.rs  retrieval.rs  store.rs
src/net/: async_tcp.rs  http.rs  mod.rs  tls.rs
src/permissions/: manager.rs  mod.rs
src/qrcode/: encode.rs  gf256.rs  matrix.rs  mod.rs  rs.rs  tables.rs
src/runtime/: executor.rs  mod.rs  reactor.rs  task.rs
src/skill/: mod.rs  tool.rs
src/terminal/: backend.rs  buffer.rs  events.rs  input.rs  mod.rs  output.rs  raw_mode.rs  screen.rs  style.rs
src/tools/: bash.rs  mod.rs  notebook.rs  search.rs  sub_agent.rs  todo.rs  web.rs
src/tui/: ansi_serialize.rs  block.rs  code_block.rs  content.rs  conversation.rs  focus.rs  header.rs  host.rs  input.rs  lang_profiles.rs  layout.rs  mod.rs  (+17 more)
tests/: event_test.rs  json_test.rs  llm_test.rs  log_integration_test.rs  log_test.rs  mod.rs  net_tls_test.rs  platform.rs  qrcode_tests.rs  registry_test.rs  repl_test.rs  terminal_raw_mode_test.rs
(+332 files in other folders)
